Change Window title

--- a/odoo/addons/web/views/webclient_templates.xml
+++ b/odoo/addons/web/views/webclient_templates.xml
@@ -195,7 +195,7 @@
                 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
                 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-                <title t-esc="title or 'Odoo'"/>
+                <title t-esc="title or 'Autopac Pro'"/>
                 <link type="image/x-icon" rel="shortcut icon" t-att-href="x_icon or '/web/static/src/img/favicon.ico'"/>
 
                 <script type="text/javascript">
@@ -230,9 +230,6 @@
                     </div>
                     <t t-raw="0"/>
                     <div class="text-center" t-if="not disable_footer">
-                        <t t-if="not disable_database_manager">
-                            <a class="" href="/web/database/manager">Manage Databases</a> |
-                        </t>
                         <a href="https://www.pacificfortunes.com" target="_blank">Powered by <span>Pacific Fortunes</span></a>
                     </div>
                 </div>
