--- a/odoo/addons/web/views/database_manager.html
+++ b/odoo/addons/web/views/database_manager.html
@@ -53,7 +53,7 @@
 {%- endmacro %}
 
 {% macro create_form() -%}
-  <p>Odoo is up and running! <br />
+  <p>Autopac Pro is up and running! <br />
   Create a new database by filling out the form,
   you'll be able to install your first app in a minute.</p>
   {{ master_input() }}
