--- a/odoo/addons/web/views/database_manager.html
+++ b/odoo/addons/web/views/database_manager.html
@@ -104,7 +104,7 @@
       <label>
         <input name="demo" type="checkbox" class="pull-right" value="1">
         <span>Load demonstration data</span>
-        <span class="text-muted"> (Check this box to evaluate Autopac Pro)</span>
+        <span class="text-muted"> (Check this box to evaluate Odoo)</span>
       </label>
     </div>
   </div>
@@ -119,7 +119,7 @@
       </div>
       {% if insecure and databases %}
       <div class="alert alert-warning">
-      Warning, your Autopac Pro database manager is not protected.
+      Warning, your Odoo database manager is not protected.
       Please <a href="#" data-toggle="modal" data-target=".o_database_master">set a master password</a>
       to secure it.
       </div>
@@ -212,7 +212,7 @@
             </div>
             <div class="form-group">
                 <label for="copy">This database might have been moved or copied.</label>
-                <p class="help-block">In order to avoid conflicts between databases, Autopac Pro needs to know if this database was moved or copied.
+                <p class="help-block">In order to avoid conflicts between databases, Odoo needs to know if this database was moved or copied.
                 If you don't know, answer "This database is a copy".</p>
               <div class="radio">
                 <label>
