--- a/odoo/addons/web/views/webclient_templates.xml
+++ b/odoo/addons/web/views/webclient_templates.xml
@@ -195,7 +195,7 @@
                 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
                 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-                <title t-esc="'Autopac Pro'">
+                <title t-esc="'Autopac Pro' or title"/>
                 <link type="image/x-icon" rel="shortcut icon" t-att-href="x_icon or '/web/static/src/img/favicon.ico'"/>
 
                 <script type="text/javascript">
